I added some words

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="content">
       <div class="about-me">
         <p>
-        Hello! My name is Ronnie Veillon, amnd I am studying accounting at Western Washington University in my third year. I regurly attend Beta Alpha Psi meetings and am working on becoming a member and hope to earn a leadership role within the club. I have work experience as a Legal Intern at a local law firm in Seattle, and I am skilled in software systems like microsoft excel and SAP ERP.
+        Hello! My name is NOT Ronnie Veillon, ITS NOT and I am studying accounting at Western Washington University in my third year. I regurly attend Beta Alpha Psi meetings and am working on becoming a member and hope to earn a leadership role within the club. I have work experience as a Legal Intern at a local law firm in Seattle, and I am skilled in software systems like microsoft excel and SAP ERP.
         </p>
         
         <p>
